<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tracked_entity_instances.ChildDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical">
            <ImageView
                android:layout_weight="0.17"
                android:id="@+id/back_img"
                android:scaleType="fitXY"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/group16682" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.83"
                android:layout_below="@+id/back_img"
                android:background="@color/blue" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/view1"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/back_btn"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/background_back_btn"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="10dp"
                        android:src="@drawable/back" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/back_btn"
                        android:text="@string/cd_title"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <!--input boxes start here-->
        <ScrollView
            android:layout_below="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="0dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:background="@null"
                            android:hint="@string/cd_name"
                            android:textColorHint="@color/desc" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/cd_no"
                            android:layout_width="0dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:background="@null"
                            android:hint="@string/cd_no"
                            android:textColorHint="@color/desc" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/cd_dob"
                            android:layout_width="0dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:background="@null"
                            android:hint="@string/cd_dob"
                            android:textColorHint="@color/desc" />

                        <ImageView
                            android:id="@+id/an_date_pick"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/background_popup_card"
                            android:src="@drawable/calendar" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/cd_gender"
                            android:layout_width="0dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:background="@null"
                            android:hint="@string/cd_gender"
                            android:textColorHint="@color/desc" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="@drawable/background_popup_card"
                        android:weightSum="2"
                        android:layout_marginVertical="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.8"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:text="@string/cd_aep"/>

                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/EnAntopo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/registration"
                            android:src="@drawable/registration" />

                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/EnSupplementary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/supplementary"
                            android:src="@drawable/supplementary" />

                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/EnTera"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:src="@drawable/feeding"/>

                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/EnOverWeight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/weighingscale"
                            android:src="@drawable/weighingscale" />


                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/EnStunting"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/stunting"
                            android:src="@drawable/stunting" />

                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/EnOtherHealth"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/other_health"
                            android:src="@drawable/other_health" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:weightSum="2"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.8"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/cd_nep"/>

                        <ImageView
                            android:visibility="visible"
                            android:id="@+id/NotEnAntopo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/registration"
                            android:src="@drawable/registration" />

                        <ImageView
                            android:visibility="visible"
                            android:id="@+id/NotEnSupplementary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/supplementary"
                            android:src="@drawable/supplementary" />

                        <ImageView
                            android:visibility="visible"
                            android:id="@+id/NotEnTera"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:src="@drawable/feeding"/>

                        <ImageView
                            android:visibility="visible"
                            android:id="@+id/NotEnOverWeight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/weighingscale"
                            android:src="@drawable/weighingscale" />


                        <ImageView
                            android:visibility="visible"
                            android:id="@+id/NotEnStunting"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/stunting"
                            android:src="@drawable/stunting" />

                        <ImageView
                            android:visibility="visible"
                            android:id="@+id/NotEnOtherHealth"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/other_health"
                            android:src="@drawable/other_health" />

                    </LinearLayout>
                    <!--            input boxes end here-->
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="goToHome"
        android:textSize="18dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_button"
        android:textAllCaps="false"
        android:text="@string/submit" />
</androidx.constraintlayout.widget.ConstraintLayout>